@@ -1,15 +1,14 @@
 package org.pepsoft.worldpainter.selection;
 
 import org.pepsoft.util.ProgressReceiver;
-import org.pepsoft.util.swing.ProgressDialog;
-import org.pepsoft.util.swing.ProgressTask;
 import org.pepsoft.worldpainter.Dimension;
 import org.pepsoft.worldpainter.WorldPainter;
 import org.pepsoft.worldpainter.WorldPainterView;
 import org.pepsoft.worldpainter.brushes.BrushShape;
 import org.pepsoft.worldpainter.operations.MouseOrTabletOperation;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import javax.swing.*;
 import java.awt.*;
 
 /**
@@ -45,24 +44,26 @@ public class CopySelectionOperation extends MouseOrTabletOperation {
 
     @Override
     protected void tick(int centreX, int centreY, boolean inverse, boolean first, float dynamicLevel) {
-        System.err.printf("tick(%d, %d, %b, %b, %f)%n", centreX, centreY, inverse, first, dynamicLevel);
-        new Throwable().printStackTrace();
         selectionHelper.setOptions(options);
         Dimension dimension = getDimension();
         dimension.setEventsInhibited(true);
         try {
-            ProgressDialog.executeTask(SwingUtilities.getWindowAncestor(getView()), new ProgressTask<Void>() {
-                @Override
-                public String getName() {
-                    return "Copying selection";
-                }
-
-                @Override
-                public Void execute(ProgressReceiver progressReceiver) throws ProgressReceiver.OperationCancelled {
-                    selectionHelper.copySelection(centreX, centreY, progressReceiver);
-                    return null;
-                }
-            }, false);
+            // TODO: opening the progress dialog (and presumeably any dialog)
+            // causes the JIDE docking framework to malfunction
+//            ProgressDialog.executeTask(SwingUtilities.getWindowAncestor(getView()), new ProgressTask<Void>() {
+//                @Override
+//                public String getName() {
+//                    return "Copying selection";
+//                }
+//
+//                @Override
+//                public Void execute(ProgressReceiver progressReceiver) throws ProgressReceiver.OperationCancelled {
+                    selectionHelper.copySelection(centreX, centreY, null);
+//                    return null;
+//                }
+//            }, false);
+        } catch (ProgressReceiver.OperationCancelled e) {
+            throw new InternalError(e);
         } finally {
             dimension.setEventsInhibited(false);
         }
@@ -71,4 +72,6 @@ public class CopySelectionOperation extends MouseOrTabletOperation {
     private SelectionHelper selectionHelper;
     private final CopySelectionOperationOptions options = new CopySelectionOperationOptions();
     private final CopySelectionOperationOptionsPanel optionsPanel = new CopySelectionOperationOptionsPanel(options);
+
+    private static final Logger logger = LoggerFactory.getLogger(CopySelectionOperation.class);
 }
