@@ -6,12 +6,15 @@ import org.pepsoft.worldpainter.RadiusControl;
 import org.pepsoft.worldpainter.WorldPainterView;
 import org.pepsoft.worldpainter.operations.RadiusOperation;
 
+import javax.swing.*;
+
 /**
  * Created by Pepijn Schmitz on 03-11-16.
  */
 public class EditSelectionOperation extends RadiusOperation {
-    public EditSelectionOperation(WorldPainterView view, RadiusControl radiusControl, MapDragControl mapDragControl) {
+    public EditSelectionOperation(WorldPainterView view, RadiusControl radiusControl, MapDragControl mapDragControl, JToggleButton copySelectionButton) {
         super("Edit Selection", "Expand or shrink the selection", view, radiusControl, mapDragControl, "operation.selection.edit", "edit_selection");
+        this.copySelectionButton = copySelectionButton;
     }
 
     @Override
@@ -24,9 +27,14 @@ public class EditSelectionOperation extends RadiusOperation {
                 selectionHelper.removeFromSelection(getBrush(), centreX, centreY);
             } else {
                 selectionHelper.addToSelection(getBrush(), centreX, centreY);
+                if (! copySelectionButton.isEnabled()) {
+                    copySelectionButton.setEnabled(true);
+                }
             }
         } finally {
             dimension.setEventsInhibited(false);
         }
     }
+
+    private final JToggleButton copySelectionButton;
 }
